--- a/index.css
+++ b/index.css
@@ -9,16 +9,22 @@ input {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
-    border: 1px solid #5f9341;
+    border: 1px solid #eb6424;
     margin-bottom: 4px;
 }
 
 button {
-    background: #5f9341;
+    background: #eb6424;
     color: white;
     padding: 10px 20px;
-    border: none;
+    border: 1px solid #eb6424;
     font-weight: bold;
+}
+
+#delete-btn {
+    border: #eb6424 1px solid;
+    background-color: white;
+    color: #eb6424;
 }
 
 ul {
@@ -32,5 +38,5 @@ li {
 }
 
 a {
-    color: #5f9341;
+    color: #eb6424;
 }
